--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   style="overflow: auto;">
   <img src="assests/image.png" alt="my cv photo" height="100" style="float: right; margin: 10px;" />
   <h1 style="text-align: center;">Steve Ramos - Professional CV</h1>
-  <h2 style="text-align: center;">+971585845569 ] <a href="https://www.linkedin.com/in/stevejramos">LinkedIn</a> ] stevejosephramos@gmail.com </h2>
+  <h2 style="text-align: center;">+971585845569 ] <a href="https://www.linkedin.com/in/stevejramos" target="_blank" rel="noopener noreferrer">LinkedIn</a> ] stevejosephramos@gmail.com </h2>
 </div>
 
 <hr />
